2012-12-20  Emil A Eklund  <eae@chromium.org>

        [flexbox] Fix handling of very large flex grow/shrink values
        https://bugs.webkit.org/show_bug.cgi?id=105579

        Reviewed by Tony Chang.

        Update expectations for element with very large flex grow value.

        * css3/flexbox/flex-algorithm.html:

2012-12-20  Simon Fraser  <simon.fraser@apple.com>

        Remove an incorrect WK2 result, and two there were identical to the WK1 results.

        * platform/mac-wk2/svg/zoom/page/zoom-svg-through-object-with-absolute-size-expected.txt: Removed.
        * platform/mac-wk2/svg/zoom/page/zoom-svg-through-object-with-huge-size-expected.txt: Removed.
        * platform/mac-wk2/svg/zoom/page/zoom-svg-through-object-with-override-size-expected.txt: Removed.

2012-12-20  Simon Fraser  <simon.fraser@apple.com>

        Skip tests in WK2 that rely on eventSender.beginDragWithFiles.

        * platform/mac-wk2/TestExpectations:

2012-12-20  Ryosuke Niwa  <rniwa@webkit.org>

        Add a Mac test expectation per bug 105584.

        * platform/mac/TestExpectations:

2012-12-20  Ryosuke Niwa  <rniwa@webkit.org>

        Add a Mac test expectation per bug 105580.

        * platform/mac/TestExpectations:

2012-12-20  Ryan Sleevi  <rsleevi@chromium.org>

        window.crypto.getRandomValues should return the input ArrayBufferView
        https://bugs.webkit.org/show_bug.cgi?id=104845

        Reviewed by Kentaro Hara.

        * fast/js/resources/js-test-pre.js:
        (shouldBeType):
        Added helper to assert that an expression returns an object of the
        correct type.
        * security/crypto-random-values-types-expected.txt:
        * security/crypto-random-values-types.html:
        Test all possible TypedArray integer types and ensure that both the
        correct TypedArray type is returned and that it is equal to the input
        type; that is, that the input type is modified in place, rather then
        copied.
