@@ -1,3 +1,14 @@
+2012-12-20  Adam Klein  <adamk@chromium.org>
+
+        Properly process <template> end tags when in TemplateContentsMode
+        https://bugs.webkit.org/show_bug.cgi?id=105556
+
+        Reviewed by Eric Seidel.
+
+        * html/parser/HTMLTreeBuilder.cpp:
+        (WebCore::HTMLTreeBuilder::processEndTag): Take care of the FIXME and just call
+        processTemplateEndTag() instead of incorrectly special-casing the end tag behavior in some cases.
+
 2012-12-20  Kondapally Kalyan  <kalyan.kondapally@intel.com>
 
         [EFL][WebGL][Wk2] Replace HAVE(GLX) checks with USE(GLX)
